@@ -72,6 +72,7 @@ Copyright: 2010 Jordan Wii <jordonwii@gmail.com>
 Copyright: 2010 Scott Scites <scott.scites@railcar88.com>
 Copyright: 2010 Daniel Kluev <dan.kluev@gmail.com>
 Copyright: 2010 Mickael Kerbrat <mickael.kerbrat@gmail.com>
+Copyright: 2010 Phil Charlesworth <phil.charlesworth@physics.org>
 
 Files: contrib/pyjscompressor.py
 Copyright: 2010 Sujan Shakya, suzan.shakya@gmail.com
